@@ -3,45 +3,68 @@ package com.example.cryptocurrency.controller;
 import com.example.cryptocurrency.dto.UserDTO;
 import com.example.cryptocurrency.model.User;
 import com.example.cryptocurrency.service.UserService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
+@Tag(name = "User", description = "Operations intended for the user")
 @RequestMapping("/user")
 public class UserController {
 
     private final UserService userService;
+    private final ModelMapper modelMapper;
 
     @Autowired
-    public UserController(UserService userService) {
+    public UserController(UserService userService, ModelMapper modelMapper) {
         this.userService = userService;
+        this.modelMapper = modelMapper;
     }
 
+    @Operation(summary = "Registers a new user", tags = "User",
+            description = "The user enters his nickname and the symbol of the desired coin.")
+    @Parameter(name = "username", description = "Enter nickname", example = "Nik")
+    @Parameter(name = "symbol", description = "Enter the coin symbol", example = "ETH")
     @PostMapping("/notify")
     public UserDTO notify(@RequestParam String username, String symbol) {
-        return userService.convertToUserDTO(userService.notify(username, symbol));
+        return convertToUserDTO(userService.notify(username, symbol));
     }
 
+    @Operation(summary = "Get user's information", tags = "User",
+            description = "Gets information about the user," +
+                    " the coin and the starting price at which the user purchased it.")
+    @Parameter(name = "username", description = "Enter nickname", example = "Nik")
     @GetMapping("/{username}")
-    public List<UserDTO> get(@PathVariable String username) {
-        return userService.getUser(username).stream()
-                .map(userService::convertToUserDTO)
-                .collect(Collectors.toList());
+    public List<UserDTO> findAllByUserName(@PathVariable String username) {
+        return userService.findAllByUserName(username).stream()
+                .map(this::convertToUserDTO)
+                .toList();
     }
 
+    @Operation(summary = "Get all users", tags = "User",
+            description = "Gets all registered users")
     @GetMapping()
     public List<UserDTO> findAll() {
         return userService.findAll()
                 .stream()
-                .map(userService::convertToUserDTO)
-                .collect(Collectors.toList());
+                .map(this::convertToUserDTO)
+                .toList();
     }
 
+    @Operation(summary = "Delete users", tags = "User",
+            description = "Delete all users by username")
+    @Parameter(name = "username", description = "Enter nickname", example = "Nik")
     @DeleteMapping("/delete")
-    public List<User> delete(@RequestParam String username) {
-        return userService.deleteUser(username);
+    public List<User> deleteAll(@RequestParam String username) {
+        return userService.deleteAll(username);
+    }
+
+    private UserDTO convertToUserDTO(User user) {
+        return modelMapper.map(user, UserDTO.class);
     }
 }
